kube01/apps/ai/coqui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coqui-ingress
  annotations:
    ingressClassName: traefik
    cert-manager.io/cluster-issuer: nf-lab
    cert-manager.io/private-key-rotation-policy: Always
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    external-dns.alpha.kubernetes.io/target: traefik.test.nf.lab
spec:
  rules:
  - host: coqui.test.nf.lab
    http:
      paths:
      - backend:
          service:
            name: coqui-svc
            port:
              number: 5002
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - coqui.test.nf.lab
    secretName: coqui-cert-tls
